--- a/fb_state/appstate.json
+++ b/fb_state/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261559220400513%22%3A%22SIDciuz9%22%7D",
+        "value": "%7B%2261559220400513%22%3A%22SIDciuz9%22%2C%2261560696549162%22%3A%22tQQX48bX%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.531Z",
-        "lastAccessed": "2024-06-14T00:55:19.532Z"
+        "creation": "2024-06-14T08:06:26.479Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.532Z",
-        "lastAccessed": "2024-06-14T00:55:19.532Z"
+        "creation": "2024-06-14T08:06:26.480Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
     },
     {
         "key": "sb",
@@ -23,44 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.532Z",
-        "lastAccessed": "2024-06-14T00:55:19.532Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x620",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.532Z",
-        "lastAccessed": "2024-06-14T00:55:19.532Z"
-    },
-    {
-        "key": "fr",
-        "value": "0c2LK038uamaf089G.AWVHr2rEGncPLpGQPK1grU0jJwM.Bma2ig..AAA.0.0.Bma2jJ.AWUWHcN9Euk",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.532Z",
-        "lastAccessed": "2024-06-14T00:55:19.532Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61559220400513",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.533Z",
-        "lastAccessed": "2024-06-14T00:55:19.533Z"
-    },
-    {
-        "key": "xs",
-        "value": "28%3AoH4NhU4woMAWDw%3A2%3A1718315210%3A-1%3A7867",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.533Z",
-        "lastAccessed": "2024-06-14T00:55:19.533Z"
+        "creation": "2024-06-14T08:06:26.480Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
     },
     {
         "key": "locale",
@@ -68,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.533Z",
-        "lastAccessed": "2024-06-14T00:55:19.533Z"
+        "creation": "2024-06-14T08:06:26.480Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
     },
     {
         "key": "vpd",
@@ -77,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.533Z",
-        "lastAccessed": "2024-06-14T00:55:19.533Z"
+        "creation": "2024-06-14T08:06:26.480Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
     },
     {
         "key": "ps_n",
@@ -86,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.533Z",
-        "lastAccessed": "2024-06-14T00:55:19.533Z"
+        "creation": "2024-06-14T08:06:26.480Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
     },
     {
         "key": "ps_l",
@@ -95,25 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.533Z",
-        "lastAccessed": "2024-06-14T00:55:19.533Z"
+        "creation": "2024-06-14T08:06:26.480Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T08:06:26.480Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x620",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T08:06:26.480Z",
+        "lastAccessed": "2024-06-14T08:06:26.480Z"
+    },
+    {
+        "key": "fr",
+        "value": "0c2LK038uamaf089G.AWWsvj-X-gVCy4dVpD-VK6c_8tw.Bma2ig..AAA.0.0.Bma_oc.AWWOhNWixBQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T08:06:26.481Z",
+        "lastAccessed": "2024-06-14T08:06:26.481Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61560696549162",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T08:06:26.481Z",
+        "lastAccessed": "2024-06-14T08:06:26.481Z"
+    },
+    {
+        "key": "xs",
+        "value": "8%3A64KFa_oi3MW0bw%3A2%3A1718352412%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T08:06:26.481Z",
+        "lastAccessed": "2024-06-14T08:06:26.481Z"
     },
     {
         "key": "fbl_st",
-        "value": "100639681%3BT%3A28638775",
+        "value": "100437427%3BT%3A28639206",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.533Z",
-        "lastAccessed": "2024-06-14T00:55:19.533Z"
+        "creation": "2024-06-14T08:06:26.481Z",
+        "lastAccessed": "2024-06-14T08:06:26.481Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2529%3Btimestamp%3A1718326551",
+        "value": "v2%3Bclient_version%3A2529%3Btimestamp%3A1718352419",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T00:55:19.533Z",
-        "lastAccessed": "2024-06-14T00:55:19.533Z"
+        "creation": "2024-06-14T08:06:26.481Z",
+        "lastAccessed": "2024-06-14T08:06:26.481Z"
     }
 ]
