--- a/fb_state/appstate.json
+++ b/fb_state/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261560583507671%22%3A%22wnMPw7CH%22%7D",
+        "value": "%7B%2261560583507671%22%3A%22wnMPw7CH%22%2C%2261559220400513%22%3A%22Hp6dNnpE%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
     },
     {
         "key": "datr",
@@ -23,17 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
     },
     {
         "key": "ps_l",
@@ -50,44 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x620",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
-    },
-    {
-        "key": "fr",
-        "value": "06powt7TsW15h1cWX.AWX4SU8tE8hbWC1Q87XATP2woZE.BmbAps..AAA.0.0.BmbAp5.AWUX5JtEDSQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61560583507671",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
-    },
-    {
-        "key": "xs",
-        "value": "44%3A4AeuS1UnDjg5LQ%3A2%3A1718356601%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
     },
     {
         "key": "locale",
@@ -95,26 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2529%3Btimestamp%3A1718356606",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100436399%3BT%3A28639276",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
     },
     {
         "key": "vpd",
@@ -122,7 +59,79 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-06-14T09:16:10.369Z",
-        "lastAccessed": "2024-06-14T09:16:10.369Z"
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x620",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
+    },
+    {
+        "key": "fr",
+        "value": "06powt7TsW15h1cWX.AWXKTqtHUU_Vlu_QqszpUTnWFtQ.BmbAps..AAA.0.0.BmbBs4.AWUftxffTv8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61559220400513",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
+    },
+    {
+        "key": "xs",
+        "value": "15%3A9N2DOErCfiZWtQ%3A2%3A1718360889%3A-1%3A7867",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2529%3Btimestamp%3A1718360895",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100438517%3BT%3A28639347",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "61559220400513",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-06-14T10:28:18.838Z",
+        "lastAccessed": "2024-06-14T10:28:18.838Z"
     }
 ]
